Implement MongoDB integration for ENB-979956
- Change Character model to use string IDs instead of UUID objects for MongoDB compatibility
- Implement MongoDB store with full CRUD operations (Create, Read, Update, Delete)
- Add MongoDB driver dependency and connection management
- Update docker-compose.yml to include MongoDB service
- Configure environment variables for MongoDB connection (MONGODB_URI, MONGODB_DATABASE, MONGODB_COLLECTION)
- Update API handlers to work with string-based IDs
- Add BSON tags to Character model for proper MongoDB serialization
- Test all CRUD operations with MongoDB backend
- GET methods now leverage MongoDB object storage to retrieve player characters from 'playercharacters' collection

--- a/webservice/docker-compose.yml
+++ b/webservice/docker-compose.yml
@@ -10,7 +10,12 @@ services:
     environment:
       - GIN_MODE=release
       - LOG_LEVEL=info
+      - MONGODB_URI=mongodb://mongodb:27017
+      - MONGODB_DATABASE=playercharacter
+      - MONGODB_COLLECTION=playercharacters
     restart: unless-stopped
+    depends_on:
+      - mongodb
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8765/health" ]
       interval: 30s
@@ -19,6 +24,22 @@ services:
       start_period: 40s
     networks:
       - webservice-network
+
+  mongodb:
+    image: mongo:7.0
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_DATABASE=playercharacter
+    volumes:
+      - mongodb_data:/data/db
+    restart: unless-stopped
+    networks:
+      - webservice-network
+
+volumes:
+  mongodb_data:
+
 
 networks:
   webservice-network:
