--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,12 @@ services:
     build:
       context: ./website
       dockerfile: Dockerfile
+      args:
+        - VITE_API_BASE_URL=http://localhost:8765
     ports:
-      - "80:80"
+      - "8764:8764"
     environment:
+      - PORT=8764
       - VITE_API_BASE_URL=http://webservice:8765
     restart: unless-stopped
     depends_on:
