--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -24,7 +24,7 @@ http {
         application/json;
 
     server {
-        listen 80;
+        listen ${PORT};
         server_name localhost;
 
         root /usr/share/nginx/html;
